--- a/Freelance-Project-Finder/src/main/resources/application.properties
+++ b/Freelance-Project-Finder/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:postgresql://localhost:15432/university
+spring.datasource.url=jdbc:postgresql://localhost:5432/university
 spring.datasource.username=postgres
-spring.datasource.password=postgres
+spring.datasource.password=root
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL10Dialect
 spring.jpa.hibernate.ddl-auto=update
